--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
                 <div class='dorik-branding'>
                     <span>Made in India 🇮🇳</span>
-         <script>
+<!--          <script>
                     var brandFlag = document.querySelector('.dorik-branding a');
                     if(brandFlag) {
                         var url = "mailto:abuse@dorik.io?subject=Abuse Report " + window.location.origin;
@@ -225,6 +225,6 @@
                 }
             })(navbar);
 
-            })();</script>
+            })();</script> -->
         </body>
     </html>
