--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Redirecting ...</title>
-      <meta http-equiv = "refresh" content = "0; url = https://heypds.odoo.com/" />
+      <meta http-equiv = "refresh" content = "0; url = https://heypds.com/" />
       <style>
         h2 {
           text-align: center;
